<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TruckIt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="description">Description</string>
    <string name="start">Start Time</string>
    <string name="end">End Time</string>
    <string name="create_load">Create a Load</string>
    <string name="have_load">Have a Load</string>
    <string name="haul_load">Haul a Load</string>
    <string name="details">Details</string>
    <string name="bids">Bids</string>
    <string name="current_jobs">Current Jobs</string>
    <string name="current_bids">Current Bids</string>
    <string name="past_jobs">Past Jobs</string>
    <string name="title_activity_client_past_jobs">Past Jobs</string>
    <string name="title_activity_client_main">Client Main</string>
    <string name="title_activity_hauler_home">Hauler Home</string>
    <string name="title_activity_hauler_profile">Hauler Profile</string>
    <string name="title_activity_hauler_loads">Hauler Loads</string>
    <string name="title_submit_bid">Submit Bid</string>
    <string name="button_hauler_profile">Profile</string>
    <string name="button_hauler_loads">Loads</string>
    <string name="title_activity_mode_select">Select Mode</string>
    <string name="pref_file">com.hack3d.truckit.PREF_FILE</string>
    <string name="name_pref">com.hack3d.truckit.user_id</string>
    <string name="load_pref">com.hack3d.truckit.load_id</string>
    <string name="display_name_pref">com.hack3d.truckit.display_name</string>
    <string name="title_activity_create_job">Create a Job</string>
    <string name="title_activity_client_bid_detail">Bid Details</string>
    <string name="pickup_by">Pick Up By (MM/DD/YYYY)</string>
    <string name="dropoff_by">Drop Off By (MM/DD/YYYY)</string>
</resources>
