<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center">

    <Button android:id="@+id/aclient_button"
            android:layout_width="96pt"
            android:layout_height="wrap_content"
            android:text="@string/have_load"
            android:onClick="clientMain"/>
    <Button android:id="@+id/provider_button"
            android:layout_below="@id/aclient_button"
            android:layout_width="96pt"
            android:layout_height="wrap_content"
            android:text="@string/haul_load"
            android:onClick="haulerHome"/>
    <Button android:id="@+id/create_load_button"
            android:layout_below="@id/provider_button"
            android:layout_width="96pt"
            android:layout_height="wrap_content"
            android:text="@string/create_load"
            android:onClick="createLoad"/>
</RelativeLayout>