<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CreateJobActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/description"
                android:id="@+id/textView"
                android:layout_gravity="left|center_vertical"/>

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="154dp"
                android:id="@+id/editText"
                android:layout_gravity="left|center_vertical"
                android:hint="A description of the work you need done."/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/start"
                android:id="@+id/textView2"
                android:layout_gravity="left|center_vertical"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/create_job_start_input"
                android:layout_gravity="left|center_vertical"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/end"
                android:id="@+id/textView3"
                android:layout_gravity="left|center_vertical"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/create_text_end_input"
                android:layout_gravity="left|center_vertical"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create Load"
                android:id="@+id/button_create_load"
                android:layout_gravity="center"
                android:onClick="createLoad"/>
    </LinearLayout>

</RelativeLayout>
